fixes page on ie

--- a/app/blocks/deal-condition/deal-condition.scss
+++ b/app/blocks/deal-condition/deal-condition.scss
@@ -42,9 +42,14 @@
     font-weight: 500;
     color: $color-font;
     padding-left: 28px;
+    white-space: nowrap;
 
     &:not(:last-child) {
       margin-right: 30px;
+    }
+
+    span {
+      white-space: nowrap;
     }
   }
 
