--- a/app/components/deal-contractor/deal-contractor.scss
+++ b/app/components/deal-contractor/deal-contractor.scss
@@ -4,6 +4,7 @@
   justify-content: flex-start;
   align-items: flex-start;
   box-sizing: border-box;
+  overflow: hidden;
   width: 100%;
 
   &__title {
